--- a/src/main/resources/fxml/login-screen.fxml
+++ b/src/main/resources/fxml/login-screen.fxml
@@ -1,14 +1,19 @@
-<?xml version="1.0" encoding="UTF-8"?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.PasswordField?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.GridPane?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<GridPane fx:controller="com.example.pixlpos.controllers.LoginScreenController"
+          xmlns:fx="http://javafx.com/fxml" alignment="CENTER" hgap="10" vgap="10">
+    <padding>
+        <Insets top="20" right="20" bottom="20" left="20"/>
+    </padding>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="com.example.pixlpos.controllers.LoginScreenController"
-            prefHeight="400.0" prefWidth="600.0">
+    <TextField fx:id="usernameField" promptText="Username" GridPane.columnIndex="1" GridPane.rowIndex="0"/>
+    <PasswordField fx:id="passwordField" promptText="Password" GridPane.columnIndex="1" GridPane.rowIndex="1"/>
 
-</AnchorPane>
+    <Button fx:id="loginButton" text="Login" onAction="#onLoginButtonClick" GridPane.columnIndex="1" GridPane.rowIndex="2"/>
+
+</GridPane>
+
