--- a/src/main/resources/fxml/adminconsole/menu-management.fxml
+++ b/src/main/resources/fxml/adminconsole/menu-management.fxml
@@ -1,14 +1,26 @@
-<?xml version="1.0" encoding="UTF-8"?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.GridPane?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<GridPane fx:controller="com.example.pixlpos.controllers.adminconsole.MenuManagementController"
+          xmlns:fx="http://javafx.com/fxml" hgap="10" vgap="10">
+    <padding>
+        <Insets top="20" right="20" bottom="20" left="20"/>
+    </padding>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="fxml.adminconsole.MenuManagement"
-            prefHeight="400.0" prefWidth="600.0">
+    <ListView fx:id="menuListView" GridPane.columnIndex="0" GridPane.rowIndex="0" GridPane.rowSpan="7"/>
 
-</AnchorPane>
+    <TextField fx:id="itemNameField" promptText="Item Name" GridPane.columnIndex="1" GridPane.rowIndex="0"/>
+    <TextField fx:id="descriptionField" promptText="Description" GridPane.columnIndex="1" GridPane.rowIndex="1"/>
+    <TextField fx:id="priceField" promptText="Price ($)" GridPane.columnIndex="1" GridPane.rowIndex="2"/>
+
+    <Button fx:id="addButton" text="Add" onAction="#onAddButtonClick" GridPane.columnIndex="1" GridPane.rowIndex="3"/>
+    <Button fx:id="removeButton" text="Remove" onAction="#onRemoveButtonClick" GridPane.columnIndex="1" GridPane.rowIndex="4"/>
+    <Button fx:id="editButton" text="Edit" onAction="#onEditButtonClick" GridPane.columnIndex="1" GridPane.rowIndex="5"/>
+    <Button fx:id="confirmButton" text="Confirm" onAction="#onConfirmButtonClick" GridPane.columnIndex="1" GridPane.rowIndex="6"/>
+
+    <Button fx:id="logoutButton" text="Logout" onAction="#onLogoutButtonClick" GridPane.columnIndex="1" GridPane.rowIndex="7"/>
+    <Button fx:id="goBackButton" text="Go Back" onAction="#onGoBackButtonClick" GridPane.columnIndex="1" GridPane.rowIndex="8"/>
+</GridPane>
