--- a/src/main/resources/fxml/waiterconsole/menu-screen.fxml
+++ b/src/main/resources/fxml/waiterconsole/menu-screen.fxml
@@ -1,14 +1,14 @@
-<?xml version="1.0" encoding="UTF-8"?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ListView?>
+<?import javafx.scene.layout.VBox?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<VBox xmlns:fx="http://javafx.com/fxml" fx:controller="com.example.pixlpos.controllers.waiterconsole.MenuScreenController" alignment="CENTER" spacing="20">
+    <padding>
+        <Insets top="20" right="20" bottom="20" left="20"/>
+    </padding>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="fxml.waiterconsole.MenuScreen"
-            prefHeight="400.0" prefWidth="600.0">
+    <ListView fx:id="menuListView" VBox.vgrow="ALWAYS"/>
+    <Button fx:id="goBackButton" text="Go Back" onAction="#onGoBackButtonClick"/>
+</VBox>
 
-</AnchorPane>
