--- a/src/main/resources/fxml/waiterconsole/waiter-landing.fxml
+++ b/src/main/resources/fxml/waiterconsole/waiter-landing.fxml
@@ -1,8 +1,5 @@
-<?xml version="1.0" encoding="UTF-8"?>
-
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.VBox?>
 
 <VBox xmlns:fx="http://javafx.com/fxml" fx:controller="com.example.pixlpos.controllers.waiterconsole.WaiterLandingController" alignment="CENTER" spacing="20">
@@ -10,6 +7,8 @@
         <Insets top="20" right="20" bottom="20" left="20"/>
     </padding>
 
-    <Label text="Waiter Page - Coming Soon!" />
+    <Button fx:id="menuButton" text="Menu" onAction="#onMenuButtonClick"/>
+    <Button fx:id="newOrderButton" text="New Order" onAction="#onNewOrderButtonClick"/>
+    <Button fx:id="ordersButton" text="Orders" onAction="#onOrdersButtonClick"/>
     <Button fx:id="logoutButton" text="Logout" onAction="#onLogoutButtonClick"/>
 </VBox>
