-> Implemented order screen to track orders. -> Implemented GUI orderscreen with completed order function and order reading

--- a/src/main/resources/fxml/waiterconsole/orders-screen.fxml
+++ b/src/main/resources/fxml/waiterconsole/orders-screen.fxml
@@ -1,14 +1,29 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="fxml.waiterconsole.OrdersScreen"
-            prefHeight="400.0" prefWidth="600.0">
+<HBox xmlns:fx="http://javafx.com/fxml" fx:controller="com.example.pixlpos.controllers.waiterconsole.OrdersScreenController" spacing="20">
+    <padding>
+        <Insets top="20" right="20" bottom="20" left="20"/>
+    </padding>
 
-</AnchorPane>
+    <VBox spacing="20">
+        <ListView fx:id="ordersListView" VBox.vgrow="ALWAYS"/>
+        <Button fx:id="markAsCompletedButton" text="Mark as Completed" onAction="#onMarkAsCompletedButtonClick"/>
+        <Button fx:id="goBackButton" text="Go Back" onAction="#onGoBackButtonClick"/>
+    </VBox>
+
+    <VBox spacing="20" VBox.vgrow="ALWAYS">
+        <ListView fx:id="orderDetailsListView" VBox.vgrow="ALWAYS"/>
+        <Label fx:id="orderTotalLabel" text="Total: $0.00">
+            <VBox.margin>
+                <Insets top="10" right="10" bottom="10" left="10"/>
+            </VBox.margin>
+        </Label>
+    </VBox>
+</HBox>
