-> Added initial functionality for CookLandingConsole, leading to Dockets Screen

--- a/src/main/resources/fxml/cookconsole/cook-landing.fxml
+++ b/src/main/resources/fxml/cookconsole/cook-landing.fxml
@@ -10,6 +10,6 @@
         <Insets top="20" right="20" bottom="20" left="20"/>
     </padding>
 
-    <Label text="Cook Page - Coming Soon!" />
+    <Button fx:id="docketsButton" text="Orders" onAction="#onDocketsButtonClick"/>
     <Button fx:id="logoutButton" text="Logout" onAction="#onLogoutButtonClick"/>
 </VBox>
