--- a/src/main/resources/fxml/cookconsole/dockets-screen.fxml
+++ b/src/main/resources/fxml/cookconsole/dockets-screen.fxml
@@ -1,14 +1,14 @@
-<?xml version="1.0" encoding="UTF-8"?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.layout.VBox?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<VBox xmlns:fx="http://javafx.com/fxml" fx:controller="com.example.pixlpos.controllers.cookconsole.CookLandingController" alignment="CENTER" spacing="20">
+    <padding>
+        <Insets top="20" right="20" bottom="20" left="20"/>
+    </padding>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="fxml.cookconsole.DocketsScreen"
-            prefHeight="400.0" prefWidth="600.0">
+    <Button fx:id="docketsButton" text="Orders" onAction="#onDocketsButtonClick"/>
+    <Button fx:id="logoutButton" text="Logout" onAction="#onLogoutButtonClick"/>
 
-</AnchorPane>
+</VBox>
+
