--- a/src/main/resources/fxml/cookconsole/dockets-screen.fxml
+++ b/src/main/resources/fxml/cookconsole/dockets-screen.fxml
@@ -1,14 +1,26 @@
+<?xml version="1.0" encoding="UTF-8"?>
+
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox xmlns:fx="http://javafx.com/fxml" fx:controller="com.example.pixlpos.controllers.cookconsole.CookLandingController" alignment="CENTER" spacing="20">
-    <padding>
-        <Insets top="20" right="20" bottom="20" left="20"/>
-    </padding>
+<BorderPane xmlns:fx="http://javafx.com/fxml" fx:controller="com.example.pixlpos.controllers.cookconsole.DocketsScreenController">
+    <top>
+        <Label text="Order Contents Here" BorderPane.alignment="CENTER"/>
+    </top>
+    <center>
+        <HBox fx:id="ordersContainer" spacing="10" BorderPane.alignment="CENTER">
 
-    <Button fx:id="docketsButton" text="Orders" onAction="#onDocketsButtonClick"/>
-    <Button fx:id="logoutButton" text="Logout" onAction="#onLogoutButtonClick"/>
-
-</VBox>
+        </HBox>
+    </center>
+    <bottom>
+        <HBox spacing="10" BorderPane.alignment="CENTER_LEFT">
+            <Button fx:id="goBackButton" text="Go Back" onAction="#onGoBackButtonClick"/>
+            <Button fx:id="refreshButton" text="Refresh" onAction="#onRefreshButtonClick"/>
+        </HBox>
+    </bottom>
+</BorderPane>
 
