--- a/src/main/resources/teampixl/com/pixlpos/fxml/loginconsole/LoginStage.fxml
+++ b/src/main/resources/teampixl/com/pixlpos/fxml/loginconsole/LoginStage.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
@@ -19,35 +20,51 @@
       </AnchorPane>
    </top>
    <center>
-      <VBox alignment="CENTER_LEFT" prefHeight="200.0" prefWidth="100.0" style="-fx-background-color: gray;" BorderPane.alignment="CENTER">
-         <AnchorPane prefHeight="78.0" prefWidth="200.0" style="-fx-background-color: black;">
+      <VBox alignment="CENTER_LEFT" prefHeight="200.0" prefWidth="100.0" style="-fx-background-color: white;" BorderPane.alignment="CENTER">
+         <AnchorPane prefHeight="3.0" prefWidth="247.0" style="-fx-background-color: white;" />
+         <VBox alignment="CENTER" prefHeight="183.0" prefWidth="247.0" style="-fx-background-color: gray; -fx-background-radius: 10 10 10 10;">
             <children>
-               <Label alignment="CENTER" layoutX="23.0" layoutY="17.0" text="Staff Portal Login" textFill="WHITE">
-                  <font>
-                     <Font size="20.0" />
-                  </font>
-               </Label>
+               <AnchorPane prefHeight="78.0" prefWidth="200.0" style="-fx-background-color: #19b929; -fx-background-radius: 10 10 0 0;">
+                  <children>
+                     <Label alignment="CENTER" layoutX="42.0" layoutY="10.0" text="Staff Portal Login" textFill="WHITE">
+                        <font>
+                           <Font size="20.0" />
+                        </font>
+                     </Label>
+                  </children>
+               </AnchorPane>
+               <Label text="Staff Username" textOverrun="CLIP" />
+               <TextField fx:id="usernameField" alignment="BOTTOM_CENTER">
+                  <VBox.margin>
+                     <Insets left="10.0" right="10.0" />
+                  </VBox.margin>
+               </TextField>
+               <Label alignment="CENTER" text="Password" />
+               <PasswordField fx:id="passwordField">
+                  <VBox.margin>
+                     <Insets left="10.0" right="10.0" />
+                  </VBox.margin>
+               </PasswordField>
+               <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="20.0">
+                  <children>
+                     <Button fx:id="loginButton" mnemonicParsing="false" prefHeight="30.0" prefWidth="70.0" text="Login" />
+                     <Button fx:id="exitButton" mnemonicParsing="false" prefHeight="30.0" prefWidth="70.0" text="Exit" />
+                  </children>
+                  <padding>
+                     <Insets left="10.0" right="10.0" />
+                  </padding>
+               </HBox>
             </children>
-         </AnchorPane>
-         <Label text="Staff Username" textOverrun="CLIP" />
-         <TextField fx:id="usernameField" alignment="BOTTOM_CENTER" />
-         <Label text="Password" />
-         <PasswordField fx:id="passwordField" />
-         <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="20.0">
-            <children>
-               <Button fx:id="loginButton" mnemonicParsing="false" prefHeight="30.0" prefWidth="70.0" text="Login" />
-               <Button fx:id="exitButton" mnemonicParsing="false" prefHeight="30.0" prefWidth="70.0" text="Exit" />
-            </children>
-         </HBox>
+         </VBox>
       </VBox>
    </center>
    <left>
-      <AnchorPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER" />
+      <AnchorPane prefHeight="238.0" prefWidth="181.0" style="-fx-background-color: white;" BorderPane.alignment="CENTER" />
    </left>
    <right>
-      <AnchorPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER" />
+      <AnchorPane prefHeight="238.0" prefWidth="171.0" style="-fx-background-color: white;" BorderPane.alignment="CENTER" />
    </right>
    <bottom>
-      <AnchorPane prefHeight="112.0" prefWidth="600.0" BorderPane.alignment="CENTER" />
+      <AnchorPane prefHeight="45.0" prefWidth="600.0" style="-fx-background-color: white;" BorderPane.alignment="CENTER" />
    </bottom>
 </fx:root>
