--- a/src/main/resources/teampixl/com/pixlpos/fxml/loginconsole/LoginStage.fxml
+++ b/src/main/resources/teampixl/com/pixlpos/fxml/loginconsole/LoginStage.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<fx:root maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" type="BorderPane" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="teampixl.com.pixlpos.controllers.loginconsole.LoginScreenController">
+<fx:root type="BorderPane" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="teampixl.com.pixlpos.controllers.loginconsole.LoginScreenController" prefHeight="400.0" prefWidth="600.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity">
    <top>
       <AnchorPane prefHeight="49.0" prefWidth="600.0" style="-fx-background-color: #19b929;" BorderPane.alignment="CENTER">
          <children>
@@ -68,3 +68,4 @@
       <AnchorPane prefHeight="45.0" prefWidth="600.0" style="-fx-background-color: white;" BorderPane.alignment="CENTER" />
    </bottom>
 </fx:root>
+
