--- a/src/main/resources/teampixl/com/pixlpos/fxml/adminconsole/AdminStageUser.fxml
+++ b/src/main/resources/teampixl/com/pixlpos/fxml/adminconsole/AdminStageUser.fxml
@@ -17,17 +17,17 @@
 
 <TabPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="800.0" tabClosingPolicy="UNAVAILABLE" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/22">
   <tabs>
-    <Tab text="Untitled Tab 1">
+    <Tab style="-fx-background-color: #19b929;" text="Users">
          <content>
             <BorderPane prefHeight="200.0" prefWidth="200.0">
                <bottom>
-                  <ButtonBar buttonMinWidth="100.0" nodeOrientation="RIGHT_TO_LEFT" prefHeight="60.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+                  <ButtonBar buttonMinWidth="144.0" nodeOrientation="RIGHT_TO_LEFT" prefHeight="60.0" prefWidth="200.0" BorderPane.alignment="CENTER">
                     <buttons>
-                      <Button mnemonicParsing="false" text="Button" />
-                        <Button mnemonicParsing="false" text="Button" />
-                        <Button mnemonicParsing="false" text="Button" />
-                        <Button mnemonicParsing="false" text="Button" />
-                        <Button mnemonicParsing="false" text="Button" />
+                      <Button mnemonicParsing="false" text="Exit" />
+                        <Button mnemonicParsing="false" text="New User" />
+                        <Button mnemonicParsing="false" text="Delete User" />
+                        <Button mnemonicParsing="false" text="Submit Changes" />
+                        <Button mnemonicParsing="false" text="Customise" />
                     </buttons>
                      <opaqueInsets>
                         <Insets />
@@ -40,41 +40,36 @@
                <center>
                   <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
                      <children>
-                        <Label contentDisplay="RIGHT" text="Label">
+                        <Label text="Edit /View Window" />
+                        <Label contentDisplay="BOTTOM" text="Username">
+                           <graphic>
+                              <TextField alignment="CENTER_RIGHT" />
+                           </graphic>
+                        </Label>
+                        <Label alignment="CENTER" contentDisplay="BOTTOM" text="Password">
+                           <graphic>
+                              <TextField alignment="CENTER_RIGHT" />
+                           </graphic>
+                        </Label>
+                        <Label contentDisplay="BOTTOM" text="Email">
+                           <graphic>
+                              <TextField alignment="CENTER_RIGHT" />
+                           </graphic>
+                        </Label>
+                        <Label contentDisplay="BOTTOM" text="Role">
                            <graphic>
                               <TextField />
                            </graphic>
                         </Label>
-                        <Label contentDisplay="RIGHT" text="Label">
-                           <graphic>
-                              <TextField />
-                           </graphic>
-                        </Label>
-                        <Label contentDisplay="RIGHT" text="Label">
-                           <graphic>
-                              <TextField />
-                           </graphic>
-                        </Label>
-                        <Label contentDisplay="RIGHT" text="Label">
-                           <graphic>
-                              <TextField />
-                           </graphic>
-                        </Label>
-                        <Label contentDisplay="RIGHT" text="Label">
-                           <graphic>
-                              <TextField />
-                           </graphic>
-                        </Label>
-                        <AnchorPane prefHeight="200.0" prefWidth="200.0" />
                         <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
                            <children>
-                              <VBox prefHeight="200.0" prefWidth="100.0">
+                              <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0">
                                  <children>
-                                    <Button mnemonicParsing="false" text="Button" />
-                                    <Button mnemonicParsing="false" text="Button" />
+                                    <Button mnemonicParsing="false" prefHeight="27.0" prefWidth="62.0" text="Submit" />
+                                    <Button mnemonicParsing="false" prefHeight="27.0" prefWidth="62.0" text="Clear" />
                                  </children>
                               </VBox>
-                              <TextField alignment="CENTER" />
+                              <TextField alignment="CENTER" promptText="Enter Username:" />
                            </children>
                         </HBox>
                      </children>
@@ -87,20 +82,27 @@
                   </VBox>
                </center>
                <right>
-                  <VBox alignment="TOP_CENTER" prefHeight="200.0" prefWidth="300.0" BorderPane.alignment="CENTER">
+                  <VBox alignment="TOP_CENTER" prefHeight="200.0" prefWidth="500.0" BorderPane.alignment="CENTER">
                      <children>
                         <Label text="Data Base" />
-                        <GridPane>
+                        <GridPane alignment="TOP_CENTER">
                           <columnConstraints>
                             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                              <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                              <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                           </columnConstraints>
                           <rowConstraints>
-                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                           </rowConstraints>
+                           <children>
+                              <Label text="Username" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
+                              <Label text="Password" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
+                              <Label text="Email" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
+                              <Label text="Role" GridPane.columnIndex="3" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
+                           </children>
                         </GridPane>
                      </children>
                   </VBox>
@@ -108,7 +110,7 @@
             </BorderPane>
          </content>
     </Tab>
-    <Tab text="Untitled Tab 2">
+    <Tab style="-fx-background-color: #19b929;" text="Untitled Tab 2">
       <content>
         <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
       </content>
