--- a/src/main/resources/teampixl/com/pixlpos/fxml/loginconsole/LoginStage.fxml
+++ b/src/main/resources/teampixl/com/pixlpos/fxml/loginconsole/LoginStage.fxml
@@ -44,7 +44,7 @@
                      <Insets left="10.0" />
                   </VBox.margin>
                </Label>
-               <PasswordField fx:id="passwordField" styleClass="text-field">
+               <PasswordField fx:id="passwordField" alignment="BOTTOM_CENTER" styleClass="text-field">
                   <VBox.margin>
                      <Insets left="10.0" right="10.0" />
                   </VBox.margin>
