--- a/src/main/resources/teampixl/com/pixlpos/fxml/adminconsole/AdminStage.fxml
+++ b/src/main/resources/teampixl/com/pixlpos/fxml/adminconsole/AdminStage.fxml
@@ -15,20 +15,20 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
-<TabPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="800.0" tabClosingPolicy="UNAVAILABLE" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1">
-  <tabs>
-    <Tab style="-fx-background-color: #19b929;" text="Users">
+<TabPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="800.0" tabClosingPolicy="UNAVAILABLE" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="teampixl.com.pixlpos.controllers.adminconsole.AdminScreenController">
+   <tabs>
+      <Tab style="-fx-background-color: #19b929;" text="Users">
          <content>
             <BorderPane prefHeight="200.0" prefWidth="200.0">
                <bottom>
                   <ButtonBar buttonMinWidth="144.0" nodeOrientation="RIGHT_TO_LEFT" prefHeight="60.0" prefWidth="200.0" BorderPane.alignment="CENTER">
-                    <buttons>
-                      <Button mnemonicParsing="false" text="Exit" />
+                     <buttons>
+                        <Button mnemonicParsing="false" text="Exit" />
                         <Button mnemonicParsing="false" text="New User" />
                         <Button mnemonicParsing="false" text="Delete User" />
                         <Button mnemonicParsing="false" text="Submit Changes" />
                         <Button mnemonicParsing="false" text="Customise" />
-                    </buttons>
+                     </buttons>
                      <opaqueInsets>
                         <Insets />
                      </opaqueInsets>
@@ -86,17 +86,17 @@
                      <children>
                         <Label text="User Database" />
                         <GridPane alignment="TOP_CENTER" gridLinesVisible="true">
-                          <columnConstraints>
-                            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                           <columnConstraints>
                               <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                               <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                          </columnConstraints>
-                          <rowConstraints>
-                            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                          </rowConstraints>
+                              <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                              <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                           </columnConstraints>
+                           <rowConstraints>
+                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                           </rowConstraints>
                            <children>
                               <Label text="Username" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
                               <Label text="Password" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
@@ -112,7 +112,7 @@
                </right>
             </BorderPane>
          </content>
-    </Tab>
+      </Tab>
       <Tab style="-fx-background-color: #19b929;" text="Items">
          <content>
             <BorderPane nodeOrientation="LEFT_TO_RIGHT">
@@ -214,5 +214,5 @@
             </BorderPane>
          </content>
       </Tab>
-  </tabs>
+   </tabs>
 </TabPane>
