feat(admincontroller): add role choicebox selection

--- a/src/main/resources/teampixl/com/pixlpos/fxml/adminconsole/AdminStage.fxml
+++ b/src/main/resources/teampixl/com/pixlpos/fxml/adminconsole/AdminStage.fxml
@@ -162,7 +162,7 @@
                                           <Insets right="25.0" />
                                        </HBox.margin>
                                     </Button>
-                                    <Button mnemonicParsing="false" styleClass="cancel-button" text="Cancel" />
+                                    <Button mnemonicParsing="false" styleClass="cancel-button" text="Cancel" onAction="#onCancelButtonClick"/>
                                  </children>
                                  <VBox.margin>
                                     <Insets top="150.0" />
