feat(admincontroller): add logout button functionality

--- a/src/main/resources/teampixl/com/pixlpos/fxml/adminconsole/AdminStage.fxml
+++ b/src/main/resources/teampixl/com/pixlpos/fxml/adminconsole/AdminStage.fxml
@@ -248,7 +248,7 @@
                                     <Insets left="50.0" top="18.0" />
                                  </HBox.margin>
                               </Text>
-                            <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" prefHeight="26.0" prefWidth="155.0" styleClass="logout-button" text="Logout">
+                            <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" prefHeight="26.0" prefWidth="155.0" styleClass="logout-button" text="Logout" onAction="#onExitButtonClick" fx:id="exitButton">
                                  <font>
                                     <Font name="Monospaced Regular" size="13.0" />
                                  </font>
@@ -481,7 +481,7 @@
                                     <Insets left="50.0" top="18.0" />
                                  </HBox.margin>
                               </Text>
-                              <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" prefHeight="26.0" prefWidth="155.0" styleClass="logout-button" text="Logout">
+                              <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" prefHeight="26.0" prefWidth="155.0" styleClass="logout-button" text="Logout" >
                                  <font>
                                     <Font name="Monospaced Regular" size="13.0" />
                                  </font>
