fix(RDM-16): Adding a fx:id to GridPane for Controller

--- a/src/main/resources/teampixl/com/pixlpos/fxml/waiterconsole/WaiterStage.fxml
+++ b/src/main/resources/teampixl/com/pixlpos/fxml/waiterconsole/WaiterStage.fxml
@@ -95,7 +95,7 @@
                   </Label>
                </children>
             </HBox>
-            <GridPane>
+            <GridPane fx:id="orderSummaryGrid">
               <columnConstraints>
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
               </columnConstraints>
